# reddit-research

./: README.md  config.yaml  pyproject.toml
sandcastle/: __init__.py  __main__.py  cli.py  config.py  doctor.py
sandcastle/collector/: base.py  brave.py  ddg.py  run.py  searxng.py
sandcastle/common/: io.py  logging.py  rate_limit.py  text.py  time.py  url.py
sandcastle/processor/: cluster.py  dedupe.py  minhash.py  quality.py  queue.py  run.py  terms.py
sandcastle/reasoner_stub/: prompt_template.txt  strategy.schema.json
sandcastle/reddit/: run.py  search.py  windows.py
sandcastle/schemas/: clusters.schema.json  deduped.schema.json  quality.schema.json  raw_result.schema.json  reddit_post.schema.json  terms.schema.json
tests/: test_dedupe.py  test_text_normalize.py  test_url_canonicalize.py
