[project]
name = "sandcastle"
version = "0.1.0"
description = "Deterministic research pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Codex"}]
dependencies = [
  "PyYAML>=6.0",
  "requests>=2.31",
  "tqdm>=4.66"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
